fix problem when zooming out (width was set to 101vw in highlights:before, so i tried max-width: 100vw on #highlights which didn't do anything so instead added it to body along with overflow-x:hidden; and it fixed problem

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,11 @@
     font-family: 'Roboto', sans-serif;
 }
 
+body {
+    max-width: 100vw;
+    overflow-x: hidden;
+}
+
 nav {
     height: 80px;
     display: flex;
@@ -147,6 +152,7 @@ HIGHLIGHTS
 
 #highlights {
     position: relative;
+    max-width: 100vw;
 }
 
 #highlights:before {
